<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp">

            <Button
                style="@style/AppButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spotify_streamer"
                android:onClick="onClickSpotifyStreamer"
                android:layout_gravity="center_horizontal" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <Button
                style="@style/AppButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scores_app"
                android:onClick="onClickScoresApp"
                android:layout_gravity="center_horizontal" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <Button
                style="@style/AppButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/library_app"
                android:onClick="onClickLibraryApp"
                android:layout_gravity="center_horizontal" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <Button
                style="@style/AppButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/build_it_bigger"
                android:onClick="onClickBuildItBigger"
                android:layout_gravity="center_horizontal" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <Button
                style="@style/AppButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/xyz_reader"
                android:onClick="onClickXyzReader"
                android:layout_gravity="center_horizontal" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <Button
                style="@style/AppButtonAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/capstone"
                android:onClick="onClickCapstone"
                android:layout_gravity="center_horizontal" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView android:text="@string/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/abc_text_size_small_material"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
